--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -1,36 +1,15 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
-    <types>
-        <members>*</members>
-        <name>ApexClass</name>
+   <types>
+        <members>ConfigSetting.Boolean_Value</members>
+        <members>ConfigSetting.String_Value</members>
+        <members>ConfigSetting.Date_Value</members>
+        <members>ConfigSetting.Number_Value</members>
+        <name>CustomMetadata</name>
     </types>
     <types>
-        <members>*</members>
-        <name>ApexComponent</name>
-    </types>
-    <types>
-        <members>*</members>
-        <name>ApexPage</name>
-    </types>
-    <types>
-        <members>*</members>
-        <name>ApexTestSuite</name>
-    </types>
-    <types>
-        <members>*</members>
-        <name>ApexTrigger</name>
-    </types>
-    <types>
-        <members>*</members>
-        <name>AuraDefinitionBundle</name>
-    </types>
-    <types>
-        <members>*</members>
-        <name>LightningComponentBundle</name>
-    </types>
-    <types>
-        <members>*</members>
-        <name>StaticResource</name>
+        <members>ConfigSetting__mdt</members>
+        <name>CustomObject</name>
     </types>
     <version>61.0</version>
 </Package>
